fix(codegen,server): resolve SonarQube MAJOR issues
- Replace @SuppressWarnings("UnusedVariable") with SonarQube-specific
  rule IDs (java:S1068 for unused fields, java:S1172 for unused params)
- Fix StringBuilder concatenation: use chained appends instead of
  string concatenation in append()
- Fix raw generic types in OpenApiParser with proper wildcards
- Return empty array instead of null in OpenApiTypeMapper
- Use Stream.toList() instead of Collectors.toList() where applicable